--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.2", features = [
+tauri = { version = "1.5.2", features = [ "protocol-all",
     "fs-all",
     "window-all",
     "dialog-all",
@@ -28,6 +28,11 @@ tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", 
 symphonia = { version = "0.5.3", features = ["mp3"] }
 symphonia-metadata = "0.5.3"
 audiotags = "0.4.1"
+bson = "2.7.0"
+logging_timer = "1.1.0"
+rayon = "1.8"
+nanoid = "0.4.0"
+
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
