--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,9 @@ bson = "2.7.0"
 logging_timer = "1.1.0"
 rayon = "1.8"
 nanoid = "0.4.0"
+clap = "3.1.0"
+lazy_static = "1.4.0"
+cpal = "0.13.0"
 
 
 [features]
