--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.5.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.2", features = [ "protocol-all",
+tauri = { version = "1.5.2", features = [ "macos-private-api", "protocol-all",
     "fs-all",
     "window-all",
     "dialog-all",
