--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
+    "react-icons": "^4.12.0",
     "react-sticky-el": "^2.1.0",
+    "solito": "^4.1.3",
     "tailwind-merge": "^2.0.0",
+    "tailwind-variants": "^0.1.18",
     "tailwindcss-animate": "^1.0.7",
     "tauri-plugin-store-api": "https://github.com/tauri-apps/tauri-plugin-store#v1"
   },
