--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slider": "^1.1.2",
+    "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-table": "^8.10.7",
     "@tanstack/react-virtual": "^3.0.0-alpha.0",
     "@tauri-apps/api": "^1.5.1",
