--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.12.0",
     "react-sticky-el": "^2.1.0",
+    "rooks": "^7.14.1",
     "solito": "^4.1.3",
     "tailwind-merge": "^2.0.0",
     "tailwind-variants": "^0.1.18",
     "tailwindcss-animate": "^1.0.7",
-    "tauri-plugin-store-api": "https://github.com/tauri-apps/tauri-plugin-store#v1"
+    "tauri-plugin-store-api": "https://github.com/tauri-apps/tauri-plugin-store#v1",
+    "use-resize-observer": "^9.1.0"
   },
   "devDependencies": {
     "@swc-jotai/react-refresh": "^0.1.0",
