--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "use-resize-observer": "^9.1.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.3.3",
     "@swc-jotai/react-refresh": "^0.1.0",
     "@tauri-apps/cli": "^1.5.6",
     "@types/node": "^20",
