--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,6 +36,8 @@ clap = "3.1.0"
 lazy_static = "1.4.0"
 cpal = "0.13.0"
 lofty = "0.17.0"
+specta = "1.0.5"
+tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
 
 
 [features]
