--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
+    "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -38,6 +39,7 @@
     "tailwind-merge": "^2.0.0",
     "tailwind-variants": "^0.1.18",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-radix": "^2.8.0",
     "tauri-plugin-store-api": "https://github.com/tauri-apps/tauri-plugin-store#v1",
     "use-resize-observer": "^9.1.0"
   },
