--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/query-core": "^5.25.0",
     "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-table": "^8.10.7",
     "@tanstack/react-virtual": "^3.0.0-alpha.0",
@@ -25,6 +26,7 @@
     "jotai": "^2.5.1",
     "jotai-effect": "^0.2.3",
     "jotai-immer": "^0.2.0",
+    "jotai-tanstack-query": "^0.8.5",
     "lucide-react": "^0.292.0",
     "million": "latest",
     "music-metadata-browser": "^2.5.10",
@@ -41,7 +43,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-radix": "^2.8.0",
     "tauri-plugin-store-api": "https://github.com/tauri-apps/tauri-plugin-store#v1",
-    "use-resize-observer": "^9.1.0"
+    "use-resize-observer": "^9.1.0",
+    "wonka": "^6.3.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.3.3",
