--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/query-core": "^5.25.0",
     "@tanstack/react-query": "^5.8.4",
+    "@tanstack/react-query-devtools": "^5.25.0",
     "@tanstack/react-table": "^8.10.7",
     "@tanstack/react-virtual": "^3.0.0-alpha.0",
     "@tauri-apps/api": "^1.5.1",
