--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@tanstack/query-core": "^5.25.0",
     "@tanstack/react-query": "^5.8.4",
     "@tanstack/react-query-devtools": "^5.25.0",
-    "@tanstack/react-table": "^8.10.7",
-    "@tanstack/react-virtual": "^3.0.0-alpha.0",
+    "@tanstack/react-table": "^8.13.2",
+    "@tanstack/react-virtual": "^3.1.3",
     "@tauri-apps/api": "^1.5.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
