trying to fix frustrating ssr errors

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,16 +12,17 @@ rust-version = "1.60"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5.0", features = [] }
+tauri-build = { version = "1.5.1", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.2", features = [ "macos-private-api", "protocol-all",
+tauri = { version = "1.6.1", features = [ "macos-private-api", "protocol-all",
     "fs-all",
     "window-all",
     "dialog-all",
     "dialog",
+    "devtools"
 ] }
 tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
