--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.292.0",
     "million": "^3.0.6",
     "music-metadata-browser": "^2.5.10",
+    "nanoid": "^5.0.6",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
@@ -43,6 +44,7 @@
     "tailwind-variants": "^0.1.18",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-radix": "^2.8.0",
+    "tauri-plugin-sql-api": "https://github.com/tauri-apps/tauri-plugin-sql#v1",
     "tauri-plugin-store-api": "https://github.com/tauri-apps/tauri-plugin-store#v1",
     "use-resize-observer": "^9.1.0",
     "wonka": "^6.3.4"
